--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,15 @@
 
  .container{
    background-color: #ccc;
+   width: 90%;
+   max-width: 1000px;
+   /*Centrar*/
+   margin: auto; 
+   /* Flex*/
+   display: flex;
+   /* flex-direction: row;
+   flex-wrap: wrap; */
+   flex-flow: row wrap;
  }
 
  body{
@@ -16,21 +25,115 @@
 
  header{
    background-color: #2c3e50;
+   width: 100%;
+   padding: 20px;
+   /* Flex */
+   display: flex;
+   /*EMPUJA LAS CAJAS HACIA LAS ORILLAS*/
+   justify-content: space-between;
+   flex-direction: row;
+   flex-wrap: wrap;
  }
-
+header > .logo > figure > img{
+  width: 50px;
+  vertical-align: top;
+}
+header > .logo > figure > a{
+  color: white;
+  font-size: 30px;
+  text-decoration: none;
+  /*ALINEAR VERTICALMENTE*/
+  line-height: 50px;
+}
+header > nav {
+  width: 50%;
+  /*Flex*/
+ display: flex;
+ flex-wrap: wrap;
+ align-items: center;
+}
+header > nav > a {
+  background-color: #c0392b;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  padding: 10px;
+  /*REPARTIR EL 50% EN PARTES IGUALES ENTRE LOS ITEMS*/
+  flex-grow: 1;
+}
+header > nav > a:hover, footer > .links > a:hover{
+  background-color: #e74c3e;
+}
+.sections{
+  background-color: white;
+  padding: 20px;
+  /*Flex*/
+  /* flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 70%; */
+  flex: 1 1 70%;
+}
+.sections > article {
+  margin-bottom: 20px;
+  padding: 20px;
+  border-bottom: 1px solid black;
+}
+.sections > article:nth-last-child(1){
+  margin-bottom: 0;
+  padding: 0;
+  border-bottom: none;
+}
  main{
    background-color: #fff;
  }
-
  aside{
-  background-color: #e67e22;
+    background-color: #e67e22;
+    padding: 20px;
+    /* flex */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    flex: 1 1 30%;
  }
 
  aside .widget {
    background-color: #d35400;
+   height: 150px;
+   margin: 10px;
  }
 
  footer{
    background-color: #2c3e50;
+   width: 100%;
+   padding: 20px;
+   /* Flex */
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
  }
-  
+ footer > .links {
+   background-color: #c0392b;
+   display: flex;
+   flex-wrap: wrap;
+ }
+ footer > .links > a {
+   flex-grow: 1;
+   padding: 10px;
+   color: white;
+   text-align: center;
+   text-decoration: none;
+ }
+ footer > .social {
+   background-color: #e67e22;
+   text-align: center;
+ }
+ footer > .social > a{
+   color: white;
+   text-decoration: none;
+   padding: 10px;
+   display: inline-block;
+ }
+ footer > .social > a:hover{
+   background-color: #f09a4e;
+ }
